# thread-protection

./: .gitignore  Makefile  README.md
docs/: .gitignore
docs/development/: setup.md
infrastructure/docker/: docker-compose.override.yml  docker-compose.yml
infrastructure/docker/configs/grafana/dashboards/: ingestion-health.json  spark-master-overview.json
infrastructure/docker/configs/grafana/provisioning/dashboards/: spark.yml
infrastructure/docker/configs/grafana/provisioning/datasources/: datasources.yml
infrastructure/docker/configs/hive/: init-metastore.sh
infrastructure/docker/configs/prometheus/: prometheus.yml
infrastructure/docker/configs/spark/: metrics.properties
infrastructure/docker/configs/trino/catalog/: delta.properties  hive.properties  kafka.properties
scripts/: setup-airflow-vars.sh
services/ingestion/: Dockerfile  README.md  pyproject.toml
services/ingestion/src/: main.py
services/ingestion/src/config/: sources.yaml
services/ingestion/src/fetchers/: __init__.py  base_fetcher.py  http_fetcher.py
services/ingestion/src/parsers/: __init__.py  adblock_parser.py  base_parser.py  hosts_parser.py
services/ingestion/src/producers/: __init__.py  kafka_producer.py
services/ingestion/src/validators/: __init__.py  domain_validator.py
services/ingestion/tests/: test_fetchers.py  test_kafka_producer.py  test_parsers.py  test_validators.py
services/orchestration/: README.md  pyproject.toml  requirements-airflow.txt
services/orchestration/dags/: domain_ingestion_dag.py  monitoring_dag.py
services/orchestration/plugins/: __init__.py  custom_operators.py
services/orchestration/tests/: test_dags.py
services/streaming/: Dockerfile  pyproject.toml
services/streaming/src/: __init__.py  main.py
services/streaming/src/config/: __init__.py  spark_config.py
services/streaming/src/streams/: __init__.py  bronze_stream.py  gold_stream.py  silver_stream.py
services/streaming/src/utils/: __init__.py  delta_utils.py  kafka_utils.py
services/streaming/tests/: test_bronze_stream.py  test_config.py  test_gold_stream.py  test_silver_stream.py  test_utils.py
tests/: conftest.py  pyproject.toml
tests/fixtures/: docker_fixtures.py  mock_servers.py  sample_data.py  streaming_fixtures.py  utils.py
tests/integration/: test_ingestion_to_kafka.py  test_streaming_pipeline_e2e.py
